심화과정 다 완료-테스트 해야함